--- a/app/views/subscriptions/edit.html.haml
+++ b/app/views/subscriptions/edit.html.haml
@@ -4,7 +4,7 @@
   = t("plans.plan settings")
 
 - content_for :mobile_right_nav do
-  =link_to t('plans.overview'), plan_path(@subscription), class: 'info_btn'
+  =link_to t('plans.overview'), plan_path(subscription), class: 'info_btn'
 
 %article
   %h1{style: "clear: none; width: 300px;"}= t("plans.settings")
@@ -12,9 +12,9 @@
   .mobile
     %dl.tabs
       %dd.highlighted
-        = link_to t("plans.settings"), edit_user_subscription_path(current_user, @subscription)
+        = link_to t("plans.settings"), edit_user_subscription_path(current_user, subscription)
       %dd
-        = link_to t("plans.month"), calendar_user_subscription_path(current_user, @subscription)
+        = link_to t("plans.month"), calendar_user_subscription_path(current_user, subscription)
 
   // Email delivery settings
   .div.float_right
