--- a/app/assets/stylesheets/mobile/_dynamic_menus.sass
+++ b/app/assets/stylesheets/mobile/_dynamic_menus.sass
@@ -1,5 +1,6 @@
-@media only screen and (max-width: 960px)
-  /* Style adjustments for viewports 960px and under go here
+html.mobile,
+@media only screen and (max-width: 990px)
+  /* Style adjustments for viewports 990px and under go here
   // `Dynamic Menus
   //----------------------------------------------------------------------------------------------------
 
