--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -362,6 +362,7 @@ p
 
 // ----------------------------------- Media queries -----------------------------------
 
+html.mobile,
 @media only screen and (max-width: 990px)
 
   body
