--- a/app/assets/stylesheets/mobile/_pagination.sass
+++ b/app/assets/stylesheets/mobile/_pagination.sass
@@ -1,5 +1,6 @@
-@media only screen and (max-width: 960px)
-  /* Style adjustments for viewports 960px and under go here
+html.mobile,
+@media only screen and (max-width: 990px)
+  /* Style adjustments for viewports 990px and under go here
   #main .pagination
     border-top: 1px solid #ccc
     clear: both
