cleaned up active tab styles

--- a/app/assets/stylesheets/mobile/_main_reader.sass
+++ b/app/assets/stylesheets/mobile/_main_reader.sass
@@ -370,7 +370,7 @@ div.close_tab
   background: #666
   border-radius: 0px
   color: #fff !important
-  +box-shadow(inset #000000 0 1px 1px 1px)
+  +box-shadow(inset #000 1px 1px 1px 0px)
 
 #main article .combo_button dd.highlighted a
   padding-left: 0px
