--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -274,9 +274,20 @@ html.mobile,
   .mobile #nav_mobile_sign_up a
     padding-left: 20px
 
-  .mobile #nav_mobile_sign_up a
-    +background-image(linear-gradient(#1a90cd, #0077b4))
+  .mobile #nav_mobile_sign_up
     background-color: #0077b4
+    border-top: 1px solid #0080C1
+    border-bottom: 1px solid #00669A
+
+  .mobile #nav_mobile_sign_out
+    background-color: #993300
+    border-bottom: 1px solid #7F2A00
+    border-top: 1px solid #A63700
+
+  .mobile #nav_mobile_sign_in
+    background-color: #728A4D
+    border-bottom: 1px solid #5D703E
+    border-top: 1px solid #7D9754
 
   #invalid_chapter button
     display: none
