one stray url helper

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -548,7 +548,7 @@ p
           width: auto
           float: none
           height: 100px
-          background: url(/assets/bdc_mobile_icons.png) no-repeat 0 50px
+          background: image-url("bdc_mobile_icons.png") no-repeat 0 50px
         div:first-child
           width: auto
           height: auto
