My plans / all plans now show up with locale.

--- a/app/views/subscriptions/index.html.haml
+++ b/app/views/subscriptions/index.html.haml
@@ -3,7 +3,7 @@
 %article
   - other_users_plans = t("plans.a users plans", username: @user.username)
   - if current_auth
-    - if request.path.downcase == user_subscriptions_path(current_user).downcase # we're on valid current_users plans page - show button navigation
+    - if request.path.downcase == user_subscriptions_path(current_user, locale: false).downcase # we're on valid current_users plans page - show button navigation
       %h1.float_left= t("plans.my plans")
       %dl.combo_button.float_right
         %dt
