sbg and eot fixes for asset pipeline

--- a/app/assets/stylesheets/bdc_home.sass
+++ b/app/assets/stylesheets/bdc_home.sass
@@ -1,20 +1,20 @@
 @font-face
   font-family: 'RobotoLight'
   src: font-url('Roboto-Light-webfont.eot')
-  src: font-url('Roboto-Light-webfont.eot?#iefix') format('embedded-opentype')
+  src: font-url('Roboto-Light-webfont.eot') format('embedded-opentype')
   src: font-url('Roboto-Light-webfont.woff') format('woff')
   src: font-url('Roboto-Light-webfont.ttf') format('truetype')
-  src: font-url('Roboto-Light-webfont.svg#RobotoLight') format('svg')
+  src: font-url('Roboto-Light-webfont.svg') format('svg')
   font-weight: normal
   font-style: normal
 
 @font-face
   font-family: 'BebasNeueRegular'
   src: font-url('../fonts/BebasNeue-webfont.eot')
-  src: font-url('../fonts/BebasNeue-webfont.eot?#iefix') format('embedded-opentype')
+  src: font-url('../fonts/BebasNeue-webfont.eot') format('embedded-opentype')
   src: font-url('../fonts/BebasNeue-webfont.woff') format('woff')
   src: font-url('../fonts/BebasNeue-webfont.ttf') format('truetype')
-  src: font-url('../fonts/BebasNeue-webfont.svg#BebasNeueRegular') format('svg')
+  src: font-url('../fonts/BebasNeue-webfont.svg') format('svg')
   font-weight: normal
   font-style: normal
 
