Changed sign in nav button to grey

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -283,9 +283,9 @@
     border-top: 1px solid #A63700
 
   .mobile #nav_mobile_sign_in
-    background-color: #728A4D
-    border-bottom: 1px solid #5D703E
-    border-top: 1px solid #7D9754
+    background-color: #555
+    border-bottom: 1px solid #666
+    border-top: 1px solid #777
 
   #invalid_chapter button
     display: none
