styled RP category list and flash notices - closes #38

--- a/app/assets/stylesheets/mobile/_form_elements.sass
+++ b/app/assets/stylesheets/mobile/_form_elements.sass
@@ -61,6 +61,13 @@
       image: image-url("flash_notice.png")
     border-color: #91b164
     color: #4b7518
+    width: 100%
+    top: 47px
+    left: 0px !important
+    position: absolute !important
+    border-radius: 0px !important
+    margin: 0px !important
+    opacity: 1 !important
 
   // `Radio buttons & Checkboxes
   //----------------------------------------------------------------------------------------------------
