--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -768,6 +768,21 @@
       color: #808080
       letter-spacing: none
 
+  .flash_notice
+    background:
+      color: #d9e4c9
+      image: image-url("flash_notice.png")
+    border-color: #91b164
+    color: #4b7518
+    width: 100%
+    top: 47px
+    left: 0px
+    position: absolute 
+    border-radius: 0px
+    margin: 0px 
+    opacity: 1
+    box-shadow: none
+
   // TODO: delete as many as possible, moving only
   // necessarry SASS into better organized folders/files
   @import mobile/avatars
