--- a/app/views/references/_js.html.haml
+++ b/app/views/references/_js.html.haml
@@ -50,14 +50,15 @@
 
 // Dump a json representation of our @version into the markup for use by reader menus.
 // Would like to move this at some point to an API call if at all possible.
-- version_json = {abbreviation: version.abbreviation.downcase, id: version.to_param }
-- version_json[:books] = {}
-- version.books.each do |book_usfm, book_info|
-  - chapters = version.books[book_usfm].chapters.map {|c| {human: c.human, usfm: c.usfm.downcase, canon: c.canonical }}
-  - version_json[:books][book_usfm.downcase] = {human: book_info.human, chapters: chapters }
+= cache "reader_version_json_#{version.to_param}", expires_in: a_short_time do
+  - version_json = {abbreviation: version.abbreviation.downcase, id: version.to_param }
+  - version_json[:books] = {}
+  - version.books.each do |book_usfm, book_info|
+    - chapters = version.books[book_usfm].chapters.map {|c| {human: c.human, usfm: c.usfm.downcase, canon: c.canonical }}
+    - version_json[:books][book_usfm.downcase] = {human: book_info.human, chapters: chapters }
 
-/ Json representation of our version. Currently used for building our dynamic chapter grid menu.
-/ This will be cached along with the entire template
-%script
-  :plain
-    version_json = #{version_json.to_json.html_safe};
+  / Json representation of our version. Currently used for building our dynamic chapter grid menu.
+  / This will be cached along with the entire template
+  %script
+    :plain
+      version_json = #{version_json.to_json.html_safe};
