added register/signin buttons to signup/signin pages - #135

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,6 +1,9 @@
 - content_for :title do
   =t('sign up')
 
+- content_for :mobile_right_nav do
+  = submit_tag t("users.register"),{:class => "submit_btn"}
+
 %article
   %h1= t("users.sign up for an account")
   -if @blurb
