--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -88,18 +88,23 @@
 #header .back_btn
   background: image-url("nav_back.png") 12px 8px no-repeat
 
-#header .save_btn
+#header .save_btn,
+#header .submit_btn
   background: image-url("mobile/save_btn.jpg") repeat-x
   display: block
-  padding: 2px 10px
+  padding: 0px 10px
   float: right
   border-radius: 4px
   color: #fff !important
   font-size: 15px
   margin-right: 12px
-  margin-top: 8px
+  margin-top: 10px
   height: 25px
   line-height: 26px
+  border: 0px
+  box-shadow: none
+  text-shadow: none
+  font-weight: normal
 
 #header .cancel_btn
   display: block
