--- a/app/assets/stylesheets/mobile/_donate.sass
+++ b/app/assets/stylesheets/mobile/_donate.sass
@@ -1,3 +1,4 @@
+// -------------Donate page
 // Note: Styles for the "Donate Now" button are combined
 // with the sidebar button styles, in _sidebar.sass
 
