--- a/app/assets/stylesheets/mobile/_pagination.sass
+++ b/app/assets/stylesheets/mobile/_pagination.sass
@@ -1,5 +1,5 @@
-@media only screen and (max-width: 990px)
-  /* Style adjustments for viewports 990px and under go here
+// @media only screen and (max-width: 990px)
+  // Style adjustments for viewports 990px and under go here
   #main .pagination
     border-top: 1px solid #ccc
     clear: both
