--- a/app/assets/stylesheets/mobile/_split_pane.sass
+++ b/app/assets/stylesheets/mobile/_split_pane.sass
@@ -15,124 +15,45 @@
   a
     text-decoration: none
 
-#main .split_pane_content .big_list li:first-child
-  border-top: 0
-  padding-top: 10px
-
-//
-// Split pane - Menu.
-//
-
 .split_pane_sidebar
-  min-height: 100px 
-
-.split_pane_sidebar dl
-  border-right: 1px solid #ccc
-  line-height: 1
-
-.split_pane_sidebar dt,
-.split_pane_sidebar dd
-  border-bottom: 1px solid #ccc
+  min-height: 100px
 
 .split_pane_sidebar dd
   border-left: 1px solid #ccc
   border-right: 1px solid #ccc
 
-.split_pane_sidebar dt,
-.split_pane_sidebar dd a:not(.no_style)
-  padding: 15px 10px
-
 .split_pane_sidebar dt
-  font-weight: bold
-  padding-bottom: 15px
-  line-height: 25px
   font-size: 22px
 
 .split_pane_sidebar dd
   font-size: 13px
 
-.split_pane_sidebar dd a:not(.no_style)
-  color: $body_text
-  display: block
-  text-decoration: none
-  padding-left: 32px
-
 .split_pane_sidebar dd a
   font-size: 15px
   margin-left: 0px !important
 
-
-.split_pane_sidebar dd a:hover:not(.no_style)
-  background:
-    color: rgba(#000, 0.05)
-
 .split_pane_sidebar .highlighted
-  background: #fff image-url("split_pane_sidebar_highlighted.png") no-repeat
-  font-weight: bold
   margin-right: 0px
 
 .split_pane_sidebar .highlighted a
   font-size: 16px
 
-.split_pane_sidebar .highlighted a:not(.no_style),
-.split_pane_sidebar .highlighted a:hover:not(.no_style)
-  background: image-url("split_pane_sidebar_highlighted_a.png") no-repeat right center
-  color: $blue
-  padding-left: 32px
-
-.split_pane_sidebar dd form
-
 
 //
-// Reading Plans
+// -----------------Reading Plans
 //
-
-.plan_search
-  select
-    margin: 0 0 24px !important
-    width: 100%
-  input
-    margin-left: 0 !important
-    width: 100% !important
-  input[type="submit"]
-    margin-top: 20px
-    +background-image(linear-gradient(#1a90cd, #0077b4))
-    background-color: #0077b4
-    padding: 10px 20px
-    color: #fff
-    text-shadow: none
-    font-size: 16px
-
-.split_devotional_pane form
-  position: static !important
-  margin-top: 10px
 
 .split_devotional_pane .embedded_reader
   margin-top: 5px !important
 
-.split_devotional_pane.highlighted a:not(.no_style),
-.split_devotional_pane.highlighted a:hover:not(.no_style)
-  background: none !important
-  font-size: 15px !important
-
-.split_devotional_pane a:not(.no_style),
-.split_devotional_pane a:hover:not(.no_style)
-  font-size: 15px !important
-
 dd.split_devotional_pane
   background: #f6f6f6
 
-.subscription_plan_links p
-  margin: 10px 0 0 0
+#main article#plan-index .split_pane_sidebar .categories_menu
+  dt
+    padding-left: 20px
 
-.about_publisher a
-  background: image-url("icon_info_blue.png") no-repeat 2px center
-  padding: 5px 5px 5px 22px
-  display: block
-  margin-bottom: 15px
-.about_plan a
-  background: image-url("icon_copyright.png") no-repeat left center
-  padding: 5px 5px 5px 22px
-  margin-bottom: 15px
-  display: block
+  dd
+    a
+      padding-left: 20px
 
