--- a/app/assets/stylesheets/mobile/_ui_elements.sass
+++ b/app/assets/stylesheets/mobile/_ui_elements.sass
@@ -1,5 +1,5 @@
-@media only screen and (max-width: 990px)
-  /* Style adjustments for viewports 990px and under go here
+// @media only screen and (max-width: 990px)
+  // Style adjustments for viewports 990px and under go here
 
   //
   // ` Calendar
