--- a/app/views/users/friends.html.haml
+++ b/app/views/users/friends.html.haml
@@ -1,7 +1,7 @@
 - content_for :user_main do
   %dl{class: "combo_button float_right"}
     %dt
-    %dd{class: ("highlighted" if @really_selected == :followers)}= link_to t('followers'), user_followers_path(@user) 
-    %dd{class: ("highlighted" if @really_selected == :following)}= link_to t('following'), user_following_path(@user) 
+    %dd{class: ("highlighted" if @selected == :followers)}= link_to t('followers'), user_followers_path(@user)
+    %dd{class: ("highlighted" if @selected == :following)}= link_to t('following'), user_following_path(@user)
   = render "list"
-  = render "shared/pagination", resource_list: @users 
+  = render "shared/pagination", resource_list: @users
