Settings and user routing + cleanup.

--- a/app/views/shared/_widget_profile_settings.html.haml
+++ b/app/views/shared/_widget_profile_settings.html.haml
@@ -1,11 +1,11 @@
-- links = [{path: profile_path, string: t('users.edit profile')},
-           {path: update_email_path, string: t('users.edit email')},
-           {path: password_path, string: t('users.edit password')},
-           {path: picture_path, string: t('users.edit picture')},
-           {path: notifications_path, string: t('users.edit notifications')},
-           {path: connections_path, string: t('users.edit connections')},
-           {path: devices_path, string: t('users.edit devices')},
-           {path: delete_account_path, string: t('users.edit account_existence')}]
+- links = [{path: "/settings/profile", string: t('users.edit profile')},
+           {path: "/settings/update_email", string: t('users.edit email')},
+           {path: "/settings/password", string: t('users.edit password')},
+           {path: "/settings/picture", string: t('users.edit picture')},
+           {path: "/settings/notifications", string: t('users.edit notifications')},
+           {path: "/settings/connections", string: t('users.edit connections')},
+           {path: "/settings/devices", string: t('users.edit devices')},
+           {path: "/settings/delete_account", string: t('users.edit account_existence')}]
 .widget
   %header
     %span.header_icon_gear
