--- a/app/views/users/notifications.html.haml
+++ b/app/views/users/notifications.html.haml
@@ -7,7 +7,7 @@
     = stylesheet_link_tag "bdc_home"
   - @sidebar = @main_nav = false
 
-= form_for @notification_settings, url: notifications_path do |n|
+= form_for @notification_settings, url: update_notifications_user_path(@user,token: params[:token]) do |n|
   - unless @notification_settings.errors.blank?
     .form_errors
       =t("users.profile.notification errors")
