--- a/app/views/users/password.html.haml
+++ b/app/views/users/password.html.haml
@@ -1,6 +1,6 @@
 - @title = "#{t('users.change my password')} | #{@user.name || @user.username}"
 
-= form_for :user, url: password_path do |f|
+= form_for :user, url: update_password_user_path(@user), method: :put do |f|
   %p
     = f.label :old_password, t('users.profile.current password')
     %br
