--- a/app/views/users/picture.html.haml
+++ b/app/views/users/picture.html.haml
@@ -12,7 +12,7 @@
 - ['24x24', '48x48', '128x128', '512x512'].each do |s|
   %img{src: @user_avatar_urls["px_#{s}"] + cache_bust, style: 'display: none'}
 
-= form_for @user, url: picture_path do |f|
+= form_for @user, url: update_picture_user_path(@user) do |f|
   %p
     = f.label :image, t('users.profile.avatar file')
     %br
