--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -13,7 +13,7 @@
                 =current_auth.username
             %ol#header_profile_menu
               %li
-                %a{:href => profile_path}
+                %a{:href => "/settings"}
                   =t("settings")
               %li
                 %a{:href => user_path(current_auth.username)}
