--- a/app/views/users/_user_info.html.haml
+++ b/app/views/users/_user_info.html.haml
@@ -4,7 +4,7 @@
       %img.avatar_huge{src: user.user_avatar_url["px_128x128"]}
     %div
       - if @me
-        %form{action: profile_path}
+        %form{action: edit_user_path(user)}
           %button.float_right= t("users.profile.edit")
       - else
         %div.float_right{style: "text-align: right;"}
@@ -24,4 +24,4 @@
           %li.icon_small_link= link_to user.website_human, user.website_url
         - if user.bio
           %li.icon_small_about= user.bio
-      
+
