connections path cleanup.

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -22,7 +22,7 @@
                 %a{:href => sign_out_path}
                   =t("sign out")
           %li
-            %a{:href => connections_path}
+            %a{:href => "/settings/connections"}
               %span
                 =t("find friends")
 
