--- a/app/views/users/_connections_tabs.html.haml
+++ b/app/views/users/_connections_tabs.html.haml
@@ -21,4 +21,4 @@
     - else
       %p= @users_error ? t('users.reset connection') : @empty_message
   - else
-    = link_to t('connect to', connection: t(@show)), new_connection_path(@show.to_s, redirect: connections_path(show: @show.to_s))
+    = link_to t('connect to', connection: t(@show)), new_connection_path(@show.to_s, redirect: "/settings/connections")
