--- a/app/views/users/password.html.haml
+++ b/app/views/users/password.html.haml
@@ -15,4 +15,4 @@
     %br
     = f.password_field :confirm_password
   %p
-    = f.submit t('users.my password')
+    = button_tag t('users.my password'), class: "action_button_green"
