--- a/app/views/users/picture.html.haml
+++ b/app/views/users/picture.html.haml
@@ -20,6 +20,6 @@
     %br
     = t('users.profile.avatar help')
   %p
-    = f.submit t('my picture')
+    = button_tag t('my picture'), class: "action_button_green"
 
 
