--- a/app/views/layouts/users.html.haml
+++ b/app/views/layouts/users.html.haml
@@ -10,8 +10,7 @@
       - elsif @selected == :following || @selected == :followers
         %h1{class: "float_left"}= t("users.my friends")
       - else
-        %h1= t("settings")
-        %h4= t("users.edit #{@selected}")
+        %h1{style: "border-bottom:1px solid #DDD; padding-bottom:.5em"}= t("users.edit #{@selected}")
       = content_for?(:user_main) ? yield(:user_main) : yield
   - else
     - # I'm looking at someone else, show their info and stuff
