--- a/app/views/users/update_email.html.haml
+++ b/app/views/users/update_email.html.haml
@@ -8,4 +8,4 @@
 = form_for @user, url: update_email_user_path(@user) do |u|
   %p
     = u.text_field :email
-    = u.submit t('users.edit email')
+    = button_tag t('users.edit email'), class: "action_button_green"
