Like it or not, I like that likes are now likely working.

--- a/app/views/users/likes.html.haml
+++ b/app/views/users/likes.html.haml
@@ -4,5 +4,5 @@
 
   - else
     %ul.big_list
-      = render partial: 'likes/list_item', collection: @likes, locals: {display: :avatar}
+      = render partial: 'likes/likes', collection: @likes, locals: {display: :avatar}
     = render partial: 'shared/pagination', locals: {resource_list: @likes}
