--- a/app/assets/stylesheets/_widgets.sass
+++ b/app/assets/stylesheets/_widgets.sass
@@ -49,7 +49,7 @@
   background:
     image: image-url("ad_bible_app.png")
     repeat: no-repeat
-    position: right bottom
+    position: 90% 85%
 
 .widget .separator
   background: image-url("separator.png") repeat-y center top
